--- a/ch16/Codebreaker.CosmosCreate/Codebreaker.CosmosCreate.csproj
+++ b/ch16/Codebreaker.CosmosCreate/Codebreaker.CosmosCreate.csproj
@@ -8,7 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.1.0-preview.*" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.0-preview.7.24251.11" />
 		<PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.6.0-beta.19" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4">
 			<PrivateAssets>all</PrivateAssets>
