--- a/ch16/Codebreaker.Live/Codebreaker.Live.csproj
+++ b/ch16/Codebreaker.Live/Codebreaker.Live.csproj
@@ -13,14 +13,20 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Azure.Messaging.EventHubs" Version="8.1.0-preview.*" />
-	<PackageReference Include="Aspire.Confluent.Kafka" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="8.1.0-preview.*" />
+    <PackageReference Include="Aspire.Azure.Messaging.EventHubs" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Azure.Storage.Queues" Version="8.0.0-preview.7.24251.11" />
+	<PackageReference Include="Aspire.Confluent.Kafka" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Kafka" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.0-preview.7.24251.11" />
     <PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.6.0-beta.27" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.62.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.4" />
-    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.25.1" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.25.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
