--- a/ch10/Start/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch10/Start/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -10,8 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting" Version="8.0.0-preview.2.23619.3" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.2.23619.3" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.SqlServer" Version="8.0.0-preview.7.24251.11" />
   </ItemGroup>
   
   <ItemGroup>
