--- a/ch13/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch13/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -9,27 +9,15 @@
 		<UserSecretsId>fd1d3a37-908b-4899-ac69-4a1f3942d57b</UserSecretsId>
 	</PropertyGroup>
 
-	<PropertyGroup>
-		<ContainerRegistry>acrokccxl67xgpc6.azurecr.io</ContainerRegistry>
-		<ContainerRepository>codebgreakergames</ContainerRepository>
-		<ContainerImageTags>4.6.3;latest</ContainerImageTags>
-	</PropertyGroup>
-
 	<ItemGroup>
 		<InternalsVisibleTo Include="Codebreaker.GameAPIs.Tests" />
 		<InternalsVisibleTo Include="Codebreaker.GameAPIs.IntegrationTests" />
 	</ItemGroup>
 
-<!--<ItemGroup>
-		<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.0-preview.6.*" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.6.*" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.0-preview.6.*" />
-	</ItemGroup>-->
-
-		<ItemGroup>
-		<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.1.0-preview.*" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.1.0-preview.*" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.1.0-preview.*" />
+	<ItemGroup>
+		<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.0-preview.7.24251.11" />
 	</ItemGroup>
 
 
