--- a/ch13/Codebreaker.AppHost/Properties/launchSettings.json
+++ b/ch13/Codebreaker.AppHost/Properties/launchSettings.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "https": {
       "commandName": "Project",
@@ -10,7 +11,8 @@
         "DOTNET_ENVIRONMENT": "Development",
         "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:16037",
         "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:17037",
-        "DOTNET_ASPIRE_SHOW_DASHBOARD_RESOURCES": "true"
+        "DOTNET_ASPIRE_SHOW_DASHBOARD_RESOURCES": "true",
+        "STARTUP_MODE": "Azure"
       }
     },
     "http": {
@@ -24,30 +26,34 @@
         "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16037",
         "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:17037",
         "DOTNET_ASPIRE_SHOW_DASHBOARD_RESOURCES": "true",
-        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true"
-      },
-      "generate-manifest": {
-        "commandName": "Project",
-        "dotnetRunMessages": true,
-        "commandLineArgs": "--publisher manifest --output-path aspire-manifest.json",
-        "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development",
-          "DOTNET_ENVIRONMENT": "Development"
-        }
+        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true",
+        "STARTUP_MODE": "Azure"
       }
     },
-    "prometheus": {
+    "OnPremises": {
       "commandName": "Project",
       "launchBrowser": true,
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:15100",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
-        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16263",
-        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true"
-      },
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16037",
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:17037",
+        "DOTNET_ASPIRE_SHOW_DASHBOARD_RESOURCES": "true",
+        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true",
+        "STARTUP_MODE": "OnPremises",
+        "DataStore": "SqlServer"
+      }
+    },
+    "generate-manifest": {
+      "commandName": "Project",
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:15100"
+      "commandLineArgs": "--publisher manifest --output-path aspire-manifest.json",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DOTNET_ENVIRONMENT": "Development"
+      }
     }
-  },
-  "$schema": "http://json.schemastore.org/launchsettings.json"
+  }
 }
