--- a/ch14/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch14/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -15,31 +15,20 @@
   </ItemGroup>
 
     <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.SignalR" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.Sql" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Redis" Version="8.1.0-preview.*" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.SignalR" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.Sql" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="8.0.0-preview.7.24251.11" />
   </ItemGroup>
-
-<!--  <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.1.0-preview.6.*" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.6.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.0-preview.6.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="8.0.0-preview.5.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.0.0-preview.6.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.SignalR" Version="8.0.0-preview.6.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.Sql" Version="8.0.0-preview.6.*" />
-    <PackageReference Include="Aspire.Hosting.Redis" Version="8.0.0-preview.6.*" />
-  </ItemGroup>-->
   
   <ItemGroup>
     <ProjectReference Include="..\CodeBreaker.Bot\CodeBreaker.Bot.csproj" />
     <ProjectReference Include="..\Codebreaker.GameAPIs\Codebreaker.GameAPIs.csproj" />
-    <ProjectReference Include="..\Codebreaker.Live\Codebreaker.Live.csproj"/>
+    <ProjectReference Include="..\Codebreaker.Live\Codebreaker.Live.csproj" />
   </ItemGroup>
 
 </Project>
