--- a/ch14/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch14/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -21,9 +21,9 @@
 	</ItemGroup>
 
     <ItemGroup>
-		<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.1.0-preview.*" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.1.0-preview.*" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.1.0-preview.*" />
+		<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.0-preview.7.24251.11" />
 	</ItemGroup>
 
 
