--- a/ch14/Codebreaker.ServiceDefaults/Codebreaker.ServiceDefaults.csproj
+++ b/ch14/Codebreaker.ServiceDefaults/Codebreaker.ServiceDefaults.csproj
@@ -14,7 +14,7 @@
 
 		<PackageReference Include="Azure.Identity" Version="1.11.3" />
 		<PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="8.5.0" />
-		<PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="8.1.0-preview.*" />
+		<PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="8.0.0-preview.7.24251.11" />
         <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.8.1" />
         <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.8.1" />
 		<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.8.1" />
