--- a/ch14/CodeBreaker.Bot/Properties/launchSettings.json
+++ b/ch14/CodeBreaker.Bot/Properties/launchSettings.json
@@ -11,14 +11,14 @@
       "applicationUrl": "http://localhost:5141",
       "dotnetRunMessages": true
     },
-    "http2": {
+    "https": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5142:http://localhost:5141",
+      "applicationUrl": "https://localhost:5142;http://localhost:5141",
       "dotnetRunMessages": true
     }
   }
