--- a/ch04/server/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch04/server/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -12,8 +12,8 @@
 	</ItemGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.0-preview.7.24251.11" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.1" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.6.1" />
