--- a/ch06/Codebreaker.SqlServerMigration/Codebreaker.SqlServerMigration.csproj
+++ b/ch06/Codebreaker.SqlServerMigration/Codebreaker.SqlServerMigration.csproj
@@ -24,7 +24,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
