--- a/ch07/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch07/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -10,12 +10,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.7.24251.11" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.7.24251.11" />
-    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.0-preview.7.24251.11" />
-    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.0.0-preview.7.24251.11" />
-    <PackageReference Include="Aspire.Hosting.Azure.KeyVault" Version="8.0.0-preview.7.24251.11" />
-    <PackageReference Include="Aspire.Hosting.Azure.Sql" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.KeyVault" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.Sql" Version="8.0.1" />
   </ItemGroup>
   
   <ItemGroup>
